fix_image_align

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ input[type="text"]:focus {
 }
 
 #image-container, #image-container-training {
-    margin-top: 20px;
+    margin: auto;
     text-align: center;
     max-width: 300px;
     max-height: 200px;
